--- a/score-manager-springboot/specs/specs.yaml
+++ b/score-manager-springboot/specs/specs.yaml
@@ -17,13 +17,13 @@ paths:
         - name: page
           in: query
           description: Page number
-          required: true
+          required: false
           schema:
             type: integer
         - name: size
           in: query
           description: Page size
-          required: true
+          required: false
           schema:
             type: integer
         - name: sort
@@ -61,7 +61,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Score'
+              $ref: '#/components/schemas/ScoreForm'
       responses:
         '201':
           description: Created
@@ -69,6 +69,71 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Score'
+  /scores/{id}:
+    get:
+      tags:
+        - scores
+      summary: Get score by id
+      operationId: getScoreById
+      parameters:
+        - name: id
+          in: path
+          description: Score id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Score'
+        '404':
+          description: Not Found
+    put:
+      tags:
+        - scores
+      summary: Update score by id
+      operationId: updateScoreById
+      parameters:
+        - name: id
+          in: path
+          description: Score id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ScoreForm'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Score'
+    delete:
+      tags:
+        - scores
+      summary: Delete score by id
+      operationId: deleteScoreById
+      parameters:
+        - name: id
+          in: path
+          description: Score id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: No Content
   /instruments:
     get:
       tags:
@@ -128,7 +193,24 @@ components:
         year:
           type: integer
       required:
+        - id
         - title
+    ScoreForm:
+        type: object
+        properties:
+            id:
+              type: integer
+              format: int64
+            title:
+              type: string
+            composer:
+              type: string
+            duration:
+              type: integer
+            year:
+              type: integer
+        required:
+            - title
     Scores:
       allOf:
         - $ref: '#/components/schemas/Page'
